--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ SHAZAM_API_KEY=66371ef011ms39a41dd183e2
 ACRCLOUD_HOST=identify-eu-west-1.acrcloud.com
 ACRCLOUD_ACCESS_KEY=c98abc8fc6b0a3
 ACRCLOUD_SECRET_KEY=vTV7tjhgdIKz5
+
+
+AUDD_API_TOKEN=4e2084b166e
