--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "form-data": "^4.0.1",
         "node-fetch": "^3.3.2",
         "request": "^2.88.2",
+        "socket.io": "^4.8.1",
         "typescript": "^5.7.3",
         "uuid": "^11.0.5"
     }
